--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -6,9 +6,10 @@
     tools:context=".Fragment.FirstFragment">
 
     <!-- TODO: Update blank com.example.codingmim.fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/listView_first_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="1" />
+         />
 
 </FrameLayout>
