firebase auth, store

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,5 +19,16 @@
        android:numColumns="4"
        app:layout_constraintTop_toBottomOf="@+id/viewpager"
        android:layout_height="wrap_content"/>
+   
+   <androidx.constraintlayout.widget.ConstraintLayout
+       app:layout_constraintTop_toBottomOf="@+id/gridview"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_marginTop="50dp">
+
+      <include layout="@layout/bottom"></include>
+
+
+   </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
