--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -6,9 +6,18 @@
     tools:context=".Fragment.MarketInfo.ReviewFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/listview_review"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="to be continue..." />
+        android:layout_height="wrap_content"/>
+    
+    <ImageView
+        android:id="@+id/write_button"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="100dp"
+        android:src="@drawable/write_button"
+        android:layout_gravity="end|bottom"/>
 
 </FrameLayout>
