--- a/app/src/main/res/layout/activity_market_info.xml
+++ b/app/src/main/res/layout/activity_market_info.xml
@@ -82,8 +82,26 @@
         />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/menu_bar"
+        android:id="@+id/zzim"
         app:layout_constraintTop_toBottomOf="@+id/header_bottom_line"
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+        
+        <TextView
+            android:id="@+id/header_zzim"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textColor="#ff0000"
+            android:gravity="center"
+            android:text="하트 뿅뿅"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/menu_bar"
+        app:layout_constraintTop_toBottomOf="@+id/zzim"
         android:layout_width="match_parent"
         android:layout_height="60dp">
 
@@ -138,6 +156,4 @@
             tools:ignore="MissingConstraints" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
