--- a/app/src/main/res/layout/activity_my_comin.xml
+++ b/app/src/main/res/layout/activity_my_comin.xml
@@ -35,4 +35,37 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <Button
+        android:id="@+id/logout_button"
+        android:text="로그아웃"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/profile_area"/>
+
+    <Button
+        android:id="@+id/profile_photo_edit"
+        android:text="프로필 사진 저장"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/logout_button"/>
+    
+<!--    <Button-->
+<!--        android:id="@+id/image_download"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="이미지 다운로드"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/logout_button"-->
+<!--        android:layout_marginTop="22dp"-->
+<!--        tools:ignore="MissingConstraints" />-->
+<!--    -->
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView"-->
+<!--        android:layout_width="100dp"-->
+<!--        android:layout_height="100dp"-->
+<!--        android:src="@drawable/bottom_1"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        android:layout_marginTop="300dp"-->
+<!--        tools:ignore="MissingConstraints" />-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
