--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.FirstFragment">
+    tools:context=".Fragment.ListFragment.FirstFragment">
 
     <!-- TODO: Update blank com.example.codingmim.fragment layout -->
     <ListView
