--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-   <androidx.viewpager.widget.ViewPager
-       android:id="@+id/viewpager"
-       app:layout_constraintTop_toTopOf="parent"
+   <pl.pzienowicz.autoscrollviewpager.AutoScrollViewPager
+       android:id="@+id/viewPager"
        android:layout_width="match_parent"
-       android:layout_height="220dp"/>
+       android:layout_height="220dp"
+       app:layout_constraintTop_toTopOf="parent"
+       tools:layout_editor_absoluteX="0dp"
+       />
 
    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:numColumns="4"
-       app:layout_constraintTop_toBottomOf="@+id/viewpager"
+       app:layout_constraintTop_toBottomOf="@+id/viewPager"
        android:layout_height="wrap_content"/>
    
    <androidx.constraintlayout.widget.ConstraintLayout
