--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -20,7 +20,13 @@
         android:layout_marginTop="50dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:text="이이잉이"/>
+        android:text="~를 아세?: 특이하게 플러리는 종종 '아세요?' 에서 요 를 빼고 쓴다
+        . 보통 본인이 어떤 플레이를 한 뒤에 설명과 함께 쓰거나, 본인이 플레이를 잘 했는데
+         시청자들이 인정을 안해줄때 '참나.... 님들이 하스스톤(혹은 슈마메)를 알기나 아세?
+         ' 라는 식으로 잘난체 할 때 쓰인다. 관련 에피소드로, 말버릇이 정착되자 트수들이
+         희한한 곳에 다 ~세를 붙이기 (밥 드셨세? 제대로 하십세 등)하기 시작했다.
+         본인은 ~세요 에서 줄인 거만 인정한다고 했으나, 이후 방송에서 본인도 문법에
+         맞지 않는 곳에 가끔 ~세를 붙이기도 한다."/>
 
 
 </FrameLayout>
