--- a/app/src/main/res/layout/activity_lecture.xml
+++ b/app/src/main/res/layout/activity_lecture.xml
@@ -10,16 +10,44 @@
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:tabIndicatorColor="@android:color/black"
         app:layout_constraintTop_toTopOf="parent"
-        />
-    
+        app:tabIndicatorColor="@android:color/black"
+        app:tabMode="scrollable"
+        android:focusable="true" />
+
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/list_viewpager"
-        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="100dp"
+        android:paddingTop="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        >
+
+    </androidx.viewpager.widget.ViewPager>
+
+    <TextView
+        android:id="@+id/open_sale"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="50dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:padding="10dp"
+        android:text="오픈 특가!"
+        android:textSize="22dp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/tab_layout"
+        tools:ignore="MissingConstraints" />
+
+
+    <TextView
+        android:id="@+id/sale"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="할인 특가!"
+        android:textSize="22dp"
+        android:textStyle="bold"
+        tools:ignore="MissingConstraints"
+        app:layout_constraintTop_toBottomOf="@id/list_viewpager"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
