--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,92 +8,96 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-   <pl.pzienowicz.autoscrollviewpager.AutoScrollViewPager
-       android:id="@+id/viewPager"
-       android:layout_width="match_parent"
-       android:layout_height="220dp"
-       app:layout_constraintTop_toTopOf="parent"
-       tools:layout_editor_absoluteX="0dp"
-       />
+    <pl.pzienowicz.autoscrollviewpager.AutoScrollViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="220dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
 
-   <GridView
-       android:id="@+id/gridview"
-       android:layout_width="match_parent"
-       android:layout_marginTop="40dp"
-       android:numColumns="4"
-       app:layout_constraintTop_toBottomOf="@+id/viewPager"
-       android:layout_height="wrap_content"/>
-   
-   <androidx.constraintlayout.widget.ConstraintLayout
-       android:id="@+id/notice_area"
-       app:layout_constraintTop_toBottomOf="@+id/gridview"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content">
+    <GridView
+        android:id="@+id/gridview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:numColumns="3"
+        android:padding="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/viewPager" />
 
-      <TextView
-          android:id="@+id/notice_text"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginLeft="30dp"
-          android:layout_marginTop="10dp"
-          android:textSize="15dp"
-          android:textStyle="bold"
-          android:text="공지사항"
-          app:layout_constraintLeft_toLeftOf="parent"
-          app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/notice_area"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/gridview">
 
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="공지사항입니다 어쩌고 저쩌구"
-          android:textSize="10dp"
-          app:layout_constraintTop_toTopOf="parent"
-          android:layout_marginTop="13dp"
-          android:layout_marginLeft="10dp"
-          app:layout_constraintLeft_toRightOf="@+id/notice_text"/>
+        <TextView
+            android:id="@+id/notice_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:text="공지사항"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-   </androidx.constraintlayout.widget.ConstraintLayout>
-
-   <androidx.constraintlayout.widget.ConstraintLayout
-       android:id="@+id/company_info_area"
-       app:layout_constraintTop_toBottomOf="@+id/notice_area"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content">
-
-      <TextView
-          android:id="@+id/company_text"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginLeft="30dp"
-          android:layout_marginTop="10dp"
-          android:textSize="15dp"
-          android:textStyle="bold"
-          android:text="회사정보"
-          app:layout_constraintLeft_toLeftOf="parent"
-          app:layout_constraintTop_toTopOf="parent" />
-
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="회사정보입니다 어쩌고 저쩌구\n좋은 회사가 좋고 어쩌고"
-          android:textSize="10dp"
-          app:layout_constraintTop_toTopOf="parent"
-          android:layout_marginTop="13dp"
-          android:layout_marginLeft="10dp"
-          app:layout_constraintLeft_toRightOf="@+id/company_text"/>
-
-   </androidx.constraintlayout.widget.ConstraintLayout>
-
-   
-   <androidx.constraintlayout.widget.ConstraintLayout
-       app:layout_constraintBottom_toBottomOf="parent"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_marginTop="30dp">
-
-      <include layout="@layout/bottom"></include>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="13dp"
+            android:text="공지사항입니다 어쩌고 저쩌구"
+            android:textSize="10dp"
+            app:layout_constraintLeft_toRightOf="@+id/notice_text"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-   </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/company_info_area"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/notice_area">
+
+        <TextView
+            android:id="@+id/company_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:text="회사정보"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="13dp"
+            android:text="회사정보입니다 어쩌고 저쩌구\n좋은 회사가 좋고 어쩌고"
+            android:textSize="10dp"
+            app:layout_constraintLeft_toRightOf="@+id/company_text"
+            app:layout_constraintTop_toTopOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <include layout="@layout/bottom"></include>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
