--- a/app/src/main/res/layout/activity_market_info.xml
+++ b/app/src/main/res/layout/activity_market_info.xml
@@ -8,146 +8,141 @@
 
     <TextView
         android:id="@+id/lecture_text"
-        android:gravity="center"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="20dp"
-        android:textSize="30dp"
-        android:textColor="#000000"
-        android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="닭요리"/>
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="닭요리"
+        android:textColor="#000000"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/lecture_review_count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:textSize="20dp"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/lecture_text"
-        android:text="최근 리뷰"/>
-    
+        android:text="최근 리뷰"
+        android:textSize="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/lecture_text" />
+
     <View
         android:id="@+id/header_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
-        app:layout_constraintTop_toBottomOf="@+id/lecture_review_count"
         android:layout_marginLeft="30dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="30dp"
-        android:layout_marginTop="10dp"/>
+        android:background="@android:color/darker_gray"
+        app:layout_constraintTop_toBottomOf="@+id/lecture_review_count" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/price_area"
         android:layout_width="match_parent"
-        app:layout_constraintTop_toBottomOf="@+id/header_line"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/header_line">
 
         <TextView
             android:id="@+id/price_text"
-            android:text="강의금액"
             android:layout_width="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="30dp"
+            android:text="강의금액"
             android:textColor="#000000"
             android:textSize="15dp"
-            android:layout_margin="30dp"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/price_real_text"
-            android:textColor="#000000"
-            android:textSize="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@+id/price_text"
-            android:layout_marginTop="30dp"
             android:layout_marginLeft="30dp"
+            android:layout_marginTop="30dp"
             android:text="25,000원"
-            />
+            android:textColor="#000000"
+            android:textSize="15dp"
+            app:layout_constraintLeft_toRightOf="@+id/price_text"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
         android:id="@+id/header_bottom_line"
         android:layout_width="match_parent"
-        android:background="@android:color/darker_gray"
         android:layout_height="1dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/price_area"
         android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="30dp"
-        />
+        android:background="@android:color/darker_gray"
+        app:layout_constraintTop_toBottomOf="@+id/price_area" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/zzim"
-        app:layout_constraintTop_toBottomOf="@+id/header_bottom_line"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
-        
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@+id/header_bottom_line">
+
         <TextView
             android:id="@+id/header_zzim"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:textColor="#ff0000"
             android:gravity="center"
-            android:text="하트 뿅뿅"/>
+            android:text="하트 뿅뿅"
+            android:textColor="#ff0000"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/menu_bar"
-        app:layout_constraintTop_toBottomOf="@+id/zzim"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="60dp"
+        app:layout_constraintTop_toBottomOf="@+id/zzim">
 
         <TextView
             android:id="@+id/figure_1"
+            style="@style/CustomTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            style="@style/CustomTextView"
-            app:layout_constraintTop_toTopOf="parent"
+            android:text="내용"
             app:layout_constraintEnd_toStartOf="@id/figure_2"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
-            android:text="내용"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/figure_2"
-            app:layout_constraintTop_toTopOf="parent"
+            style="@style/CustomTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            style="@style/CustomTextView"
+            android:text="정보"
             app:layout_constraintEnd_toStartOf="@id/figure_3"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@id/figure_1"
-            android:text="정보"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/figure_3"
-            app:layout_constraintTop_toTopOf="parent"
+            style="@style/CustomTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            style="@style/CustomTextView"
+            android:text="리뷰"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@id/figure_2"
-            android:text="리뷰"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/content_area"
-        app:layout_constraintTop_toBottomOf="@+id/menu_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/menu_bar">
 
         <FrameLayout
             android:id="@+id/fragment_area"
