--- a/app/src/main/res/layout/activity_market_info2.xml
+++ b/app/src/main/res/layout/activity_market_info2.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="@string/chicken"
+        android:text="소고기"
         android:textColor="#000000"
         android:textSize="30dp"
         android:textStyle="bold"
@@ -61,7 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="30dp"
-            android:text="25,000원"
+            android:text="11,345원"
             android:textColor="#000000"
             android:textSize="15dp"
             app:layout_constraintLeft_toRightOf="@+id/price_text"
